# microsoft-todo-mcp-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-11-microsoft-todo-mcp-server.md
docs/superpowers/specs/: 2026-03-11-microsoft-todo-mcp-server-design.md
src/microsoft_todo_mcp_server/: server.py
